fixed spacing issues with individual-candidate-container and twitter-timeline-display to improve responsiveness

--- a/client/src/components/candidate-view.css
+++ b/client/src/components/candidate-view.css
@@ -9,7 +9,7 @@
 }
 
 .individual-candidate-information {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -17,24 +17,30 @@
 }
 
 .candidate-details {
+    box-sizing: border-box;
     font-size: 24px;
-    width: 500px;
-    min-width: fit-content;
-    margin: 10px 10px 30px 10px;
+    width: 100%;
+    background: #f4f7f8;
+    color: #212121;
+    padding: 20px; 
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .twitter-timeline-container {
+    background: #f4f7f8;
     width: 100%;
     height: 100%;
+    margin: 10px 0px 50px 0px;
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 @media screen and (min-width: 1000px) {
     .individual-candidate-container {
-        width: 55%;
+        box-sizing: border-box;
+        width: 50%;
         float: left;
         height: 100%;
-        margin: 0px;
     }
 }
